Added players, win, reset button, everything working for a screen size of 820x440

--- a/index.html
+++ b/index.html
@@ -7,51 +7,43 @@
   </head>
   <body>
   <h1>TIC TAC TOE</h1>
+
+
+  <!-- Mine -->
   <img id = "tttboard" src="http://www.clker.com/cliparts/5/5/2/3/13498137761170088994Blank%20Tic%20Tack%20Toe.svg.med.png" alt="tic tac to board" />
 
-  <div id = "board" class= "entireBoard">
+  <div id = "board">
+    <div id="row1">
 
-    <div id = "pos1">
-    <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
+      <div id = "pos1" class = "cell">-</div>
+
+      <div id = "pos2" class = "cell">-</div>
+
+      <div id = "pos3" class = "cell">-</div>
     </div>
 
-    <div id = "pos2">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+  <div id="row2">
+    <div id = "pos4" class = "cell">-</div>
 
-    <div id = "pos3">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+    <div id = "pos5" class = "cell">-</div>
 
-    <div id = "pos4">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+    <div id = "pos6" class = "cell">-</div>
+  </div>
 
-    <div id = "pos5">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+  <div id="row3">
+    <div id = "pos7" class = "cell">-</div>
 
-    <div id = "pos6">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+    <div id = "pos8" class = "cell">-</div>
 
-    <div id = "pos7">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
+    <div id = "pos9" class = "cell">-</div>
+  </div>
 
-    <div id = "pos8">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
-
-    <div id = "pos9">
-      <img class = "blanco" src="http://www.drodd.com/images14/yellow-wallpaper29.jpg" name = "blanco" />
-    </div>
   </div>
 
 
-  <button type="button" name="Reset">Reset</button>
+  <button id = "reset">Reset</button>
 
-  <script src="js/main.js">
+  <script type="text/javascript" src="js/main.js">
   </script>
   </body>
 </html>
